# vascular_encoding_framework

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  README.md  boundaries.py  centerline.py  centerline_domain_extractors.py  centerline_path_extractor.py  install_env.sh  install_scripts.sh  messages.py  pyproject.toml  requirements.txt  utils.py  vascular_encoding.py  vascular_mesh.py
.github/: CODEOWNERS
.github/workflows/: vef_release.yml
centerline/: __init__.py  centerline.py  centerline_domain_extractors.py  domain_extractors.py  path_extractor.py
encoding/: __init__.py  radius.py  vascular_encoding.py  vessel_encoding.py
scripts/: __init__.py  case_io.py  vef_case.py  vef_compute_centerline.py  vef_encode.py  vef_make_case.py
scripts/config/: readers.py  writers.py
scripts/config/defaults/: centerline.json  cl_path.json  encoding.json  flux.json  seekers.json
tutorials/: VMR_tutorial-es.md  VMR_tutorial.md  VMR_tutorial.py
utils/: _code.py  geometry.py  graphic.py  spatial.py  splines.py
vascular_encoding_framework/: __about__.py  __init__.py  messages.py
vascular_encoding_framework/_base/: __init__.py  _code.py  encoding.py  misc.py  node.py  tree.py  value_typed_dict.py
vascular_encoding_framework/alignement/: alignment.py  gpa.py
vascular_encoding_framework/alignment/: alignment.py  gpa.py
vascular_encoding_framework/centerline/: __init__.py  centerline.py  centerline_tree.py  curve.py  domain_extractors.py  parallel_transport.py  path_extractor.py
vascular_encoding_framework/encoding/: __init__.py  encoding.py  radius.py  vascular_encoding.py  vessel_encoding.py
vascular_encoding_framework/encoding/remesh/: __init__.py  cross_sections.py  remesh.py
vascular_encoding_framework/remesh/: __init__.py  cross_sections.py
vascular_encoding_framework/splines/: bivariate.py  psplines.py  splines.py  univariate.py
vascular_encoding_framework/utils/: _code.py  _io.py  geometry.py  graphic.py  misc.py  spatial.py  splines.py
vascular_encoding_framework/vascular_mesh/: boundaries.py  vascular_mesh.py
vascular_mesh/: __init__.py  vascular_mesh.py
vef_scripts/: README.md  install_env.sh  pyproject.toml
vef_scripts/vef_scripts/: __init__.py  __main__.py  case_io.py  vef_align.py  vef_case.py  vef_cohort.py  vef_compute_centerline.py  vef_encode.py  vef_make_case.py
vef_scripts/vef_scripts/config/: __init__.py  readers.py  writers.py
vef_scripts/vef_scripts/config/defaults/: alignment.json  icp.json  seekers.json
vef_scripts/vefcli/: case_io.py  vef_compute_centerline.py
vef_scripts/vefcli/config/defaults/: cl_path.json
vefcli/: install.sh
vefcli/vefcli/: vef_case.py  vef_encode.py  vef_make_case.py
vefcli/vefcli/config/: __init__.py
