[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name    = "vascular_encoding_framework"
authors = [{name="Pau Romero", email="pau.romero@uv.es"}]
version = "0.0.1"
dynamic = ["dependencies", "readme"]#, "version"]
description = "A python implementation of the vascular encoding framework and vessel coordinate system."
#license = {text = ""}
#requires-python = ">=3.8"

classifiers = ['Topic :: Scientific/Engineering :: Medical Science Apps.',
               'Development Status :: 1 - Planning']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme       = {file = ["README.md"]}
#version      = {attr = "vascular_encoding_framework.__version__"}

[tool.setuptools]
packages = [
            "vascular_encoding_framework",
            "vascular_encoding_framework.centerline",
            "vascular_encoding_framework.config_files",
            "vascular_encoding_framework.encoding",
            "vascular_encoding_framework.utils",
            "vascular_encoding_framework.vascular_mesh",
            ]

[project.urls]
homepage = "https://github.com/PauR0/vascular_encoding_framework"