[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name    = "vef_scripts"
authors = [{name="Pau Romero", email="pau.romero@uv.es"}]
version = "0.0.1"
dynamic = ["dependencies", "readme"]#, "version"]
description = "Python module interface to vascular encoding framework using the case directory logic."
#license = {text = ""}
#requires-python = ">=3.8"

classifiers = ['Topic :: Scientific/Engineering :: Medical Science Apps.',
               'Development Status :: 1 - Planning']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme       = {file = ["README.md"]}
#TODO:version

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}


[tool.setuptools.package-data]
vef_scripts = ['vef_scripts/config/default/*.json']

[project.urls]
homepage = "https://github.com/PauR0/vascular_encoding_framework"